macros/tests/ui/fail_function_no_prefix.rs
use surql_macros::surql_function;

#[surql_function("get_entity")]
fn get_entity() {}

fn main() {}
